// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dateFromISOString should reject invalid strings 1`] = `
[
  {
    "code": "invalid_string",
    "path": [],
  },
]
`;

exports[`dateFromISOString should reject non-strings 1`] = `
[
  {
    "code": "invalid_type",
    "path": [],
  },
]
`;
